Funzione abbandona gruppo implementata

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="studente">Studente</string>
     <string name="Mostra_elenco_aule">Mostra elenco aule</string>
     <string name="Mostra_mappa_aule">Mostra mappa aule</string>
-
+    <string name="Conferma_iscrizione">Conferma iscrizione</string>
 </resources>
