--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AppAuleStudio</string>
+    <string name="app_name">StudyAround</string>
     <string name="studente">Studente</string>
     <string name="Mostra_elenco_aule">Mostra elenco aule</string>
     <string name="Mostra_mappa_aule">Mostra mappa aule</string>
