--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -91,9 +91,12 @@
     <string name="dialog_gestione_gruppo_4">hours</string>
     <string name="dialog_gestione_gruppo_5">cancel</string>
     <string name="dialog_legenda_1">Legenda</string>
-    <string name="dialog_legenda_2">Current reservation</string>
-    <string name="dialog_legenda_3">Future reservation</string>
-    <string name="dialog_legenda_4">Closed reservation</string>
+    <string name="dialog_legenda_a">Current booking</string>
+    <string name="dialog_legenda_b">Future booking</string>
+    <string name="dialog_legenda_c">Expired booking</string>
+    <string name="dialog_legenda_2">Un posto nel tavolo è attualmente riservato a te.</string>
+    <string name="dialog_legenda_3">Un posto nel tavolo risulterà riservato a te dall\'orario di inizio della prenotazione.</string>
+    <string name="dialog_legenda_4">Il tuo posto è stato liberato, ma puoi comunque entrare o uscire dall\'aula in caso di necessità.</string>
     <string name="dialog_mezzo_1">Select mean of transport</string>
     <string name="dialog_mezzo_2">Start</string>
     <string name="dialog_qr">Want to start?</string>
