--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="home_docente_2">Caricamento...</string>
     <string name="home_docente_3">Crea gruppi</string>
 
-    <string name="dialog_componenti_1">Seleziona componeneti</string>
+    <string name="dialog_componenti_1">Seleziona componenti</string>
     <string name="dialog_componenti_2">Conferma</string>
     <string name="dialog_iscrizione_1">Gruppo:</string>
     <string name="dialog_iscrizione_2">Corso:</string>
